[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/ui.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/settings_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/Main.tres" type="Theme" id=3]

[node name="settings_menu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.862745 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -50.0
margin_right = 45.0
margin_bottom = -5.0
theme = ExtResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -60.0
text = "CREDITS

Battle Ranger
by Jack Anderson

Soundtrack
Battle Ranger - Yanagi Seigen
Battle Ranger - Battle - Yanagi Seigen

Additional Assets from
opengameart.org
freesound.org
kenney.nl
pexels.com
dafont.com

Made in Godot Engine
godotengine.org"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_controls" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 164.0
margin_bottom = 152.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Label" parent="volume_controls"]
margin_right = 84.0
margin_bottom = 14.0
text = "MUSIC VOLUME"

[node name="music_volume" type="HSlider" parent="volume_controls"]
margin_top = 26.0
margin_right = 84.0
margin_bottom = 42.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="sound" type="Label" parent="volume_controls"]
margin_top = 54.0
margin_right = 84.0
margin_bottom = 68.0
text = "SOUND VOLUME"

[node name="sound_volume" type="HSlider" parent="volume_controls"]
margin_top = 80.0
margin_right = 84.0
margin_bottom = 96.0
max_value = 1.0
step = 0.1
value = 1.0
